--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
     "clean": "rimraf dist",
     "build": "nuxt build",
     "dev": "nuxt dev",
+    "start": "nuxt start",
     "generate": "nuxt generate",
     "preview": "nuxt preview"
   },
   "dependencies": {
     "jump.js": "^1.0.2",
     "nuxt": "^2.13.0",
-    "nuxt-i18n": "^6.12.2",
     "vue-awesome-swiper": "^3.1.3",
     "vue-typer": "^1.2.0"
   },
